Bug 429782 - Translations folder lookup is a chicken-or-egg issue currently
Summary: Translations folder lookup is a chicken-or-egg issue currently
Status: RESOLVED FIXED
Alias: None
Product: SeExpr
Classification: Frameworks and Libraries
Component: Translations (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: amyspark
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-11-28 21:50 UTC by amyspark
Modified: 2020-12-20 17:00 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description amyspark 2020-11-28 21:50:23 UTC
SUMMARY
In https://invent.kde.org/graphics/kseexpr/-/commit/facf1a4203d860ccc7b8884a914200c54023749b, I forced KSeExpr to use the application's own data directory for looking up its translations. This is consistent with Krita's own usage case (bundling the library across multiple operating systems in its own hierarchy).

However, it's been reported that this will not work in Linux if the library is system-installed.

STEPS TO REPRODUCE
1. 
2. 
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 amyspark 2020-12-20 17:00:16 UTC
Git commit 27355bcea93bab88954188cd53f1dce2796a0a49 by L. E. Segovia.
Committed on 01/12/2020 at 01:23.
Pushed by lsegovia into branch 'master'.

Fix translation lookup in stock Linux deployments

M  +8    -3    src/KSeExprUI/ECMQmLoader-seexpr2_qt.cpp

https://invent.kde.org/graphics/kseexpr/commit/27355bcea93bab88954188cd53f1dce2796a0a49