Fix translation lookup in stock Linux deployments

BUG: 429782